# MentorFish

./: .gitattributes  .gitignore  AGENTS.md  README.md  index.html  justfile  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: PRD.md
knowledge/openings/: Perfect_2010.abk  olympiad.abk
scripts/: build_openings.py  ingest.py  merge_trees.py  ocr_parallel.py  parse_abk.py
src/: App.tsx  chessground.alpha.css  chessground.metal.css  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_schema.sql  opening_names.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/agents/: curriculum.rs  executor.rs  memory.rs  mod.rs  pedagogical.rs  strategic.rs  tactical.rs  theory.rs
src-tauri/src/database/: lancedb.rs  mod.rs  postgres.rs  redis.rs
src-tauri/src/engine/: mod.rs  play.rs  stockfish.rs
src-tauri/src/features/: extractor.rs  mod.rs
src-tauri/src/inference/: mod.rs  ollama.rs  router.rs
src-tauri/src/ipc/: analysis.rs  chat.rs  config.rs  games.rs  helpers.rs  knowledge.rs  mod.rs  play.rs  profile.rs  types.rs
src-tauri/src/knowledge/: ingestion.rs  mod.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/orchestrator/: engine.rs  mod.rs
src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx
src/components/Analysis/: AnalysisView.tsx
src/components/Board/: Board.tsx  BoardArrows.tsx  BoardChatView.tsx  BoardHeatmap.tsx  BoardOverlay.tsx  PlanVisualizer.tsx  index.ts
src/components/Chat/: CoachChat.tsx  index.ts
src/components/Curriculum/: CurriculumView.tsx  (+1 more)
src/hooks/: useResizablePanel.ts
src/lib/: bridge.test.ts  tauriBridge.ts  types.test.ts  types.ts  utils.test.ts  utils.ts
src/stores/: boardStore.ts  index.ts  playStore.ts  repertoireStore.ts  settingsStore.ts  store.test.ts  uiStore.ts
(+26 files in other folders)
